[package]
name = "bdk-core-wallet-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version= "^0.13.0", default-features = false, features = ["all-keys", "key-value-db", "rpc"]}
dirs-next = "2.0"
